--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,7 +1,7 @@
 ---
 name: Đỗ Công Sơn
 avatar: /static/images/avatar.png
-occupation: Web develops
+occupation: Web Developer
 company: Học viện kĩ thuật mật mã
 email: docongson04@gmail.com
 twitter: https://twitter.com/Twitter
@@ -9,10 +9,42 @@ linkedin: https://www.linkedin.com
 github: https://github.com/DoCongSon
 ---
 
-I started learning to code in 2019 when I started college.
+## Hello, folks! 👋 I'm Cong Son
 
-I landed my first job as a Front-end Developer in 2023.
+I have a passion for **JavaScript/Typescript** and website development.
+I'm currently a freelancer web developer (I'm also looking for a full-time job). I work mainly with **Javascript**, **Typescript**, **React**, **NodeJS**, and **NextJS**.
 
-I have a passion for JavaScript/Typescript and website development.
+## Why have this blog?
 
-I started this blog to practice my skill and share my knowledge.
+> My journey is fueled by a deep desire to sharpen my abilities and share the insights I’ve gathered along the way.
+
+I founded this blog as a means to document and share the knowledge and practical wisdom I've acquired during my journey as a software engineer.
+
+Writing and taking notes helps me solidify my understanding of new concepts and technologies. I hope my blog can be a useful resource for fellow web developers.
+
+I would greatly appreciate your thoughts and comments on what I have written 🍻.
+
+## Tech stack
+
+This blog is built with [Next.js](https://nextjs.org/) and [Tailwind CSS](https://tailwindcss.com/) using **Tailwind Nextjs Starter Blog**.
+
+This blog site takes inspiration from [aka Karhdo](https://https://karhdo.dev). I appreciate [aka Karhdo](https://twitter.com/karhdo) and [Timothy Lin](https://twitter.com/timlrxx) for their contribution to this minimal, lightweight, and highly customizable blog starter.
+
+A few major over-engineering-changes from the original repo:
+
+- 📌 Upgrading to **React 18**, **Next 15**.
+
+- 📌 Adopting **Typescript**, committing with
+  [Conventional Commits](https://www.conventionalcommits.org/).
+
+- 📌 Monitoring site with [Umami](https://umami.is/)
+  website analytics
+
+- 📌 My website refers to the design
+  from the [aka Karhdo](https://github.com/Karhdo/karhdo.dev) repository and incorporates the
+  tailwind-nextjs-starter-blog template, version 2.0.
+
+- 📌 Bumping up `mdx-bundler`, `rehype`/`remark`
+  plugins and dependencies to the latest version
+
+🧐See my [repository](https://github.com/) for this blog.
