feat: add Facebook field to author data and update layout to include Facebook link

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -4,8 +4,7 @@ avatar: /static/images/avatar.png
 occupation: Web Developer
 company: Học viện kĩ thuật mật mã
 email: docongson04@gmail.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
+facebook: https://facebook.com/docongson2001
 github: https://github.com/DoCongSon
 ---
 
@@ -47,4 +46,4 @@ A few major over-engineering-changes from the original repo:
 - 📌 Bumping up `mdx-bundler`, `rehype`/`remark`
   plugins and dependencies to the latest version
 
-🧐See my [repository](https://github.com/) for this blog.
+🧐See my [repository](https://github.com/DoCongSon/My-Blog-and-Portfolio) for this blog.
